--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
   text-align: center;
   font-family: sans-serif;
 }
+h1 {
+  font-size: 40px;
+}
 ul {
   padding: 0;
 }
@@ -18,23 +21,26 @@ ul {
 }
 .item {
   width: 330px;
-  margin: 40px 20px;
+  margin: 20px 20px;
   position: relative;
 }
 .inputName {
   width: 160px;
-  position: absolute;
-  left: 80px;
+  position: relative;
+  top: 25px;
   border: 0;
   text-align: center;
+  font-size: 20px;
 }
 #x {
   cursor: pointer;
   position: absolute;
   right: 40px;
+  font-weight: bold;
 }
 #QR {
   width: 15em;
+  margin-top: 10px;
 }
 #addr {
   overflow-wrap: anywhere;
@@ -49,10 +55,16 @@ ul {
 footer {
   display: flex;
   justify-content: center;
+  margin-top: 40px;
 }
 .githublogo{
   width: 64px;
   position:relative; 
   top:-5px;
   left: -5px;
+}
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 34px;
+  }
 }
